force-app/main/default/objects/qatestobj__c/qatestobj__c.object-meta.xml
<CustomObject>
    <label>qatestobj</label>
    <nameField>
        <label>qatestobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>qatestobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>