force-app/main/default/objects/qatestobj__c/fields/Plf2__c.field-meta.xml
<CustomField>
    <fullName>Plf2__c</fullName>
    <label>Plf2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>