force-app/main/default/objects/qatestobj__c/recordTypes/aprrct1.recordType-meta.xml
<RecordType>
    <fullName>aprrct1</fullName>
    <active>true</active>
    <label>aprrct1</label>
</RecordType>